# MxlPy

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  changelog.rst  merge-request.sh  mkdocs.yml  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  tests.yml
docs/: api-changes.ipynb  basics.ipynb  carousel.ipynb  citing.md  comparisons.ipynb  compartmentalisation.ipynb  examples.ipynb  experimental.ipynb  fitting.ipynb  fuzzy_fitting.ipynb  index.ipynb  index.md  integrators.ipynb  label-models.ipynb  label-npe.ipynb  label_map.ipynb  llms.txt  mca.ipynb  metaprogramming.ipynb  monte-carlo.ipynb  mxl.ipynb  neural-posterior-estimation.ipynb  parameter_identifiability.ipynb  parameterise.ipynb  report.ipynb  rtd-requirements.txt  sbml.ipynb  scans.ipynb  stability.ipynb  steady-state-surrogate.ipynb  symbolic.ipynb
docs/assets/: __init__.py  brenda_rubisco_only.json  illustrations.ipynb  models.py  utils.py
docs/example_models/: __init__.py  example1.py  linear_chain.py  poolman2000.py  ratefunctions.py  shared.py  upper_glycolysis.py
publication-figures/: figures2025.ipynb
src/example_models/: __init__.py  example1.py  linear_chain.py  poolman2000.py  test_nested.py  upper_glycolysis.py  utils.py
src/modelbase/core/: algebraicmixin.py
src/modelbase/ml/: mc.py
src/modelbase/utils/: plotting.py
src/modelbase2/: __init__.py  distributions.py  fit.py  fns.py  label_map.py  linear_label_map.py  mc.py  mca.py  model.py  npe.py  parallel.py  parameterise.py  plot.py  scan.py  scans.py  scope.py  simulator.py  surrogates.py  symbolic.py  types.py  typing.py
src/modelbase2/core/: algebraicmixin.py  basemodel.py  compoundmixin.py  parametermixin.py  ratemixin.py  stoichiometricmixin.py  utils.py
src/modelbase2/experimental/: __init__.py  codegen.py  diff.py  source_tools.py  strikepy.py  symbolic.py  tex.py
src/modelbase2/integrators/: __init__.py  int_assimulo.py  int_scipy.py  protocol.py
src/modelbase2/mc/: __init__.py  _dist.py  _parallel.py  _plot.py  _scan.py
src/modelbase2/meta/: __init__.py  codegen.py  codegen_latex.py  codegen_modebase.py  codegen_py.py  source_tools.py  tex.py
src/modelbase2/ml/: mc.py
src/mxlpy/: __init__.py  carousel.py  compare.py  fit.py  fit_common.py  fit_global.py  fit_local.py  fuzzy.py  identify.py  linear_label_map.py  mc.py  mca.py  model.py  npe.py  paths.py  plot.py  report.py  scan.py  simulator.py  types.py
tests/: conftest.py  models.py  test_distributions.py  test_fit.py  test_fit_local.py  test_label_map.py  test_linear_label_map.py  test_mc.py  test_mca.py  test_minimize.py  test_model.py  test_npe.py  test_scan.py  test_scans.py  test_simulator.py  test_strikepy.py  test_sympy.py
tests/codegen/: test_generate_model_py.py  test_generate_model_rs.py  test_generate_mxlpy.py  test_tex.py
tests/core/: test_base_model.py  test_ids.py  test_stoichiometric_mixin.py  test_utils.py
tests/experimental/: test_codegen.py  test_tex.py
tests/integration/: test_poolman_2000.py
tests/model/: test_derived_initial_conditions.py  test_model_.py  test_surrogate.py
tests/ode/: test_algebraicfunctions.py  test_mca.py  test_ratefunctions.py  test_ratelaws.py
tests/sbml/: __init__.py  test_import.py
tests/simulator/: test_continued_simulation.py  test_protocol_time_course.py  test_result.py  test_simulator.py
tests/surrogates/: test_poly.py  test_torch.py
tests/symbolic/: test_call.py
tests/utils/: test_plotting.py
(+111 files in other folders)
