[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "Marvin van Aalst", email = "marvin.vanaalst@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: OS Independent",
]
description = "A package to build metabolic models"
keywords = ["modelling", "ode", "metabolic"]
license = "GPL-3.0-or-later"
maintainers = [
  { name = "Marvin van Aalst", email = "marvin.vanaalst@gmail.com" },
]
name = "modelbase2"
readme = "README.md"
version = "1.57.2"
dependencies = ["toml-sort>=0.23.1,<0.24"]

[tool.bandit]
skips = ["B101", "B301", "B403", "B404", "B603", "B607"]

[tool.mypy]
disallow_untyped_defs = true
exclude = "tests/*.py"
ignore_missing_imports = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pixi.dependencies]
ruff = ">=0.6.4,<0.7"
matplotlib = ">=3.9.2,<4"
numpy = ">=2.1.1,<3"
pandas = ">=2.2.2,<3"
python = ">=3.10.14,<4"
python-libsbml = ">=5.20.4,<6"
scipy = ">=1.14.1,<2"
sympy = ">=1.13.2,<2"
tqdm = ">=4.66.5,<5"
typing-extensions = ">=4.12.2,<5"
coverage = ">=7.6.1,<8"
jupyter = ">=1.1.1,<2"
jupyter_contrib_nbextensions = ">=0.7.0,<0.8"
mypy = ">=1.11.2,<2"
pytest = ">=8.3.2,<9"
pytest-cov = ">=5.0.0,<6"
requests = ">=2.32.3,<3"
mkdocs = ">=1.6.1,<2"
mkdocs-jupyter = ">=0.25.0,<0.26"
mkdocs-material = ">=9.5.34,<10"
more-itertools = ">=10.5.0,<11"
ipykernel = ">=6.29.5,<7"
notebook = ">=7.2.2,<8"
pebble = ">=5.0.7,<6"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
modelbase2 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "ANN101",  # self-type annotation
  "ANN401",  # any
  "COM812",  # missing trailing comma
  "D100",    # undocumented module
  "D101",    # undocumented class
  "D102",    # undocumented method
  "D103",    # undocumented function
  "D104",    # undocumented package
  "D107",    # undocumented init
  "D203",    #
  "D205",    # blank line after summary
  "D211",    # blank line before class
  "D213",    # multi-line summary first line
  "D400",    # first line ends with period
  "D403",    # first line capitalised first word
  "D415",    # furst line punctuation
  "E501",    # line-too-long
  "FIX001",  # line contains FIXME
  "ISC001",  # single line implicit string concat
  "N806",    # non-lowercase variable
  "PGH003",  # specific rule type ignore
  "S110",    # try-except-pass
  "S301",    # pickle usage
  "TD001",   # invalid todo tag
  "TD002",   # missing todo author
  "TD003",   # missing todo link
  "PLR0913", # max num of arguments
]
select = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "T201", # print statements
]
"tests/*" = [
  'S101', # assert
]

[tool.tomlsort]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 2
trailing_comma_inline_array = true
